# futarin-raspi

./: .gitignore  README.md  futarin-api.service  futarin.example.toml  futarin.service  futarin.toml  install.sh  pyproject.toml  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/audio/: wellcome.vvproj  whathappen.vvproj
assets/vox/: fail.vvproj  how_about_saying_this.vvproj  message.vvproj  message_mode.vvproj  normal.vvproj  please_talk_again.txt  please_talk_again.vvproj  please_wait.vvproj  post_message_success.vvproj  receive_message.vvproj  send_message.vvproj  shutdown.vvproj  try_again.vvproj  voice.vvproj  welcome.vvproj  what_up.vvproj  what_up_with_guidance.vvproj
linux/: dnsmasq.conf  futarin.service  hostapd.conf  netplan-config.yaml
src/: .main.py.swp  futarin.toml  main.old.py  main.py  ring_led.py  run.py  ws-with-asyncio.py
src/backend/: api.py
src/config/: config.py
src/interface/: audio.py  button.py  led.py  mic.py  ring_led.py  speaker.py  wifi.py
src/log/: log.py  logger.py
src/setting/: setting.py  setting_server.py  switch_network.py  wifi.py
src/setting-server/: setting-server.py
src/setting-server/template/: setting.html
src/setting/flask-src/static/css/: setting.css
src/setting/flask-src/static/js/: setting.js
src/setting/flask-src/template/: setting.html
src/websocket/: client.py
src_old/websocket/: client.py
