[tool.poetry]
name = "futarin-raspi"
version = "0.1.0"
description = ""
authors = ["cykps <cykps.ps@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
gpiozero = "^2.0.1"
websockets = "^12.0"
wheel = "^0.43.0"
rpi-gpio = "^0.7.1"
pyaudio = "^0.2.14"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
