[tool.poetry]
name = "futarin-raspi"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
gpiozero = "^2.0.1"
websockets = "^12.0"
wheel = "^0.43.0"
pyaudio = "^0.2.14"
httpx = "^0.27.0"
rpi-lgpio = "^0.6"
pydub = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
