[project]
name = "futarin-raspi"
version = "0.1.0"
description = "Futaringoto program running on RasPi"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.2",
    "gpiozero>=2.0.1",
    "pyaudio>=0.2.14",
    "rpi-lgpio>=0.6",
    "pydub>=0.25.1",
    "flask>=3.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
